--- a/.github/workflows/pipeline-deploy-s3.yml
+++ b/.github/workflows/pipeline-deploy-s3.yml
@@ -1,8 +1,9 @@
 name: pipeline-deploy-s3
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch
+#push:
+#branches: [ main ]
 
 jobs:
   build:
